@@ -27,6 +27,7 @@
 package org.dita.dost.invoker;
 
 import static org.dita.dost.invoker.Arguments.*;
+import static org.dita.dost.log.DITAOTAntLogger.USE_COLOR;
 import static org.dita.dost.util.Configuration.transtypes;
 import static org.dita.dost.util.Constants.ANT_TEMP_DIR;
 import static org.dita.dost.util.LangUtils.pair;
@@ -37,6 +38,9 @@ import com.google.common.base.Strings;
 import com.google.common.collect.ImmutableMap;
 import java.io.*;
 import java.net.URI;
+import java.net.URISyntaxException;
+import java.nio.file.Files;
+import java.nio.file.InvalidPathException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.time.LocalDateTime;
@@ -53,7 +57,11 @@ import org.apache.tools.ant.util.ClasspathUtils;
 import org.apache.tools.ant.util.FileUtils;
 import org.apache.tools.ant.util.ProxySetup;
 import org.dita.dost.log.MessageUtils;
+import org.dita.dost.log.StandardLogger;
+import org.dita.dost.platform.PluginInstall;
+import org.dita.dost.platform.PluginUninstall;
 import org.dita.dost.platform.Plugins;
+import org.dita.dost.platform.SemVerMatch;
 import org.dita.dost.project.Project.Context;
 import org.dita.dost.project.Project.Publication;
 import org.dita.dost.project.ProjectFactory;
@@ -67,6 +75,7 @@ import org.dita.dost.util.URLUtils;
  */
 public class Main extends org.apache.tools.ant.Main implements AntMain {
 
+  private static final String SYSTEM_PROPERTY_DITA_HOME = "dita.dir";
   private static final String ANT_ARGS_INPUT = "args.input";
   static final String ANT_ARGS_RESOURCES = "args.resources";
   static final String ANT_ARGS_INPUTS = "args.inputs";
@@ -87,6 +96,11 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
     "args.filter",
     "profiles"
   );
+  private static final String CONFIGURATION_FILE = ".ditaotrc";
+
+  @Deprecated
+  /** @deprecated since 4.2 */
+  private static final String CONFIGURATION_FILE_OLD = "local.properties";
 
   /**
    * File that we are using for configuration.
@@ -121,7 +135,7 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
 
   private final ArgumentParser argumentParser = new ArgumentParser();
   private Arguments args;
-  static final ResourceBundle locale = ResourceBundle.getBundle("cli", new Locale("en", "US"));
+  public static final ResourceBundle locale = ResourceBundle.getBundle("cli", new Locale("en", "US"));
 
   /**
    * Prints the message of the Throwable if it (the message) is not {@code null}.
@@ -131,19 +145,12 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
   private void printMessage(final Throwable t) {
     final String message = t.getMessage();
     if (message != null && !message.trim().isEmpty()) {
-      printErrorMessage("" + message);
+      printErrorMessage(message, t);
     }
   }
 
-  private void printErrorMessage(final String msg) {
-    if (args != null && args.useColor) {
-      System.err.print(DefaultLogger.ANSI_RED);
-      System.err.print(String.format(locale.getString("error_msg"), msg));
-      System.err.println(DefaultLogger.ANSI_RESET);
-    } else {
-      System.err.println(String.format(locale.getString("error_msg"), msg));
-    }
-    System.err.println();
+  private void printErrorMessage(final String msg, final Throwable t) {
+    logger.error(msg, t);
   }
 
   /**
@@ -159,6 +166,7 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
    *                                 <code>null</code> in which case the system classloader is
    *                                 used.
    */
+  @Deprecated
   public static void start(
     final String[] args,
     final Properties additionalUserProperties,
@@ -181,6 +189,15 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
   public void startAnt(final String[] args, final Properties additionalUserProperties, final ClassLoader coreLoader) {
     try {
       processArgs(args);
+    } catch (final CliException exc) {
+      handleLogfile();
+      logger.setOutputLevel(Project.MSG_INFO);
+      printMessage(exc);
+      if (exc.info != null) {
+        logger.info(exc.info);
+      }
+      exit(1);
+      return;
     } catch (final BuildException exc) {
       handleLogfile();
       printMessage(exc);
@@ -234,7 +251,7 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
       }
       if (this.args.repeat > 1) {
         for (int i = 0; i < durations.length; i++) {
-          System.out.println(String.format(locale.getString("conversion.repeatDuration"), i + 1, durations[i]));
+          logger.info(locale.getString("conversion.repeatDuration").formatted(i + 1, durations[i]));
         }
       }
     } catch (final BuildException be) {
@@ -280,14 +297,19 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
    *
    * @param args Command line arguments. Must not be <code>null</code>.
    */
+  @Deprecated
   public static void main(final String[] args) {
     start(args, null, null);
   }
 
+  final StandardLogger logger;
+
   /**
    * Constructor used when creating Main for later arg processing and startup
    */
-  public Main() {}
+  public Main() {
+    logger = new StandardLogger(System.out, System.err, Project.MSG_INFO, true);
+  }
 
   /**
    * Process command line arguments. When ant is started from Launcher,
@@ -301,16 +323,18 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
     final Map<String, Object> definedProps = new HashMap<>(args.definedProps);
     projectProps = Collections.singletonList(definedProps);
     buildFile = args.buildFile;
+    logger.setOutputLevel(args.msgOutputLevel);
+    logger.setUseColor(args.useColor);
 
     if (args.justPrintUsage) {
-      args.printUsage(false);
+      logger.setOutputLevel(Project.MSG_INFO);
+      logger.info(args.getUsage(false));
       return;
     } else if (args.justPrintDiagnostics) {
       Diagnostics.doReport(System.out, args.msgOutputLevel);
       return;
     }
 
-    final File integratorFile = findBuildFile(System.getProperty("dita.dir"), "integrator.xml");
     if (args instanceof PluginsArguments) {
       printPlugins();
       return;
@@ -321,38 +345,20 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
       printTranstypes();
       return;
     } else if (args instanceof final DeliverablesArguments deliverablesArgs) {
-      if (deliverablesArgs.projectFile == null) {
-        printErrorMessage(locale.getString("deliverables.error.project_not_defined"));
-        args.printUsage(true);
-        throw new BuildException("");
-      }
-      printDeliverables(deliverablesArgs.projectFile);
+      printDeliverables(deliverablesArgs);
       return;
     } else if (args instanceof final InstallArguments installArgs) {
-      buildFile = integratorFile;
-      targets.clear();
-      if (installArgs.installFile != null) {
-        targets.add("install");
-        final File f = new File(installArgs.installFile.replace('/', File.separatorChar)).getAbsoluteFile();
-        if (f.exists()) {
-          definedProps.put(ANT_PLUGIN_FILE, f.getAbsolutePath());
-        } else {
-          definedProps.put(ANT_PLUGIN_FILE, installArgs.installFile);
-        }
-      } else {
-        targets.add("integrate");
-      }
+      install(installArgs);
+      return;
     } else if (args instanceof final UninstallArguments installArgs) {
-      if (installArgs.uninstallId == null) {
-        printErrorMessage(locale.getString("uninstall.error.identifier_not_defined"));
-        args.printUsage(true);
-        throw new BuildException("");
-      }
-      buildFile = integratorFile;
-      targets.clear();
-      targets.add("uninstall");
-      definedProps.put(ANT_PLUGIN_ID, installArgs.uninstallId);
+      uninstall(installArgs);
+      return;
     } else if (args instanceof final ConversionArguments conversionArgs) {
+      final File ditaDir = new File(System.getProperty(SYSTEM_PROPERTY_DITA_HOME));
+      final File basePluginDir = new File(ditaDir, Configuration.pluginResourceDirs.get("org.dita.base").getPath());
+      buildFile = findBuildFile(basePluginDir.getAbsolutePath(), "build.xml");
+      definedProps.putAll(getLocalProperties(ditaDir));
+      definedProps.put(USE_COLOR, Boolean.toString(conversionArgs.useColor));
       if (conversionArgs.projectFile == null) {
         projectProps = Collections.singletonList(definedProps);
       } else {
@@ -369,9 +375,7 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
           err = locale.getString("conversion.error.input_not_defined");
         }
         if (err != null) {
-          printErrorMessage(err);
-          args.printUsage(true);
-          throw new BuildException("");
+          throw new CliException(err, args.getUsage(true));
         }
         // default values
         if (!definedProps.containsKey(ANT_OUTPUT_DIR)) {
@@ -403,24 +407,20 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
 
     // make sure buildfile exists
     if (!buildFile.exists() || buildFile.isDirectory()) {
-      System.out.println("Buildfile " + buildFile + " does not exist!");
-      throw new BuildException("Build failed");
+      throw new CliException("Buildfile " + buildFile + " does not exist!");
     }
 
     // Normalize buildFile for re-import detection
     buildFile = FileUtils.getFileUtils().normalize(buildFile.getAbsolutePath());
-
-    if (args.msgOutputLevel >= Project.MSG_VERBOSE) {
-      System.out.println("Buildfile " + buildFile);
-    }
+    logger.debug("Buildfile " + buildFile);
 
     if (args.logFile != null) {
       PrintStream logTo;
       try {
         logTo = new PrintStream(new FileOutputStream(args.logFile));
       } catch (final IOException ioe) {
-        throw new BuildException(
-          "Cannot write on the specified log file. " + "Make sure the path exists and you have write permissions."
+        throw new CliException(
+          "Cannot write to the specified log file. Make sure the path exists and you have write permissions."
         );
       }
       out = logTo;
@@ -429,6 +429,119 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
       System.setErr(err);
     }
     readyToRun = true;
+  }
+
+  private void uninstall(UninstallArguments installArgs) {
+    if (installArgs.uninstallId == null) {
+      throw new CliException(locale.getString("uninstall.error.identifier_not_defined"), args.getUsage(true));
+    }
+    final PluginUninstall pluginUninstall = new PluginUninstall();
+    pluginUninstall.setId(installArgs.uninstallId);
+    pluginUninstall.setDitaDir(new File(System.getProperty(SYSTEM_PROPERTY_DITA_HOME)));
+    pluginUninstall.setLogger(logger);
+
+    try {
+      pluginUninstall.execute();
+    } catch (CliException e) {
+      throw e;
+    } catch (Exception e) {
+      throw new CliException(e.getMessage(), e);
+    }
+  }
+
+  private void install(InstallArguments installArgs) {
+    final PluginInstall pluginInstall = new PluginInstall();
+    pluginInstall.setDitaDir(new File(System.getProperty(SYSTEM_PROPERTY_DITA_HOME)));
+    pluginInstall.setLogger(logger);
+    if (installArgs.definedProps.containsKey("force")) {
+      pluginInstall.setForce(Boolean.parseBoolean(installArgs.definedProps.get("force").toString()));
+    }
+    if (installArgs.installFile != null) {
+      final File f = new File(installArgs.installFile.replace('/', File.separatorChar)).getAbsoluteFile();
+      final String pluginFile = f.exists() ? f.getAbsolutePath() : installArgs.installFile;
+      try {
+        pluginInstall.setPluginFile(Paths.get(pluginFile));
+      } catch (InvalidPathException e) {
+        // Ignore
+      }
+      try {
+        final URI uri = new URI(pluginFile);
+        if (uri.isAbsolute()) {
+          pluginInstall.setPluginUri(uri);
+        }
+      } catch (URISyntaxException e) {
+        // Ignore
+      }
+      if (pluginFile.contains("@")) {
+        final String[] tokens = pluginFile.split("@");
+        pluginInstall.setPluginName(tokens[0]);
+        pluginInstall.setPluginVersion(new SemVerMatch(tokens[1]));
+      } else {
+        pluginInstall.setPluginName(pluginFile);
+        pluginInstall.setPluginVersion(null);
+      }
+    }
+
+    try {
+      pluginInstall.execute();
+    } catch (CliException e) {
+      throw e;
+    } catch (Exception e) {
+      throw new CliException(e.getMessage(), e);
+    }
+  }
+
+  /**
+   * Read configuration files and return combined map of properties. Files have the following priority:
+   *
+   * <ol>
+   *     <li><code>{@link #CONFIGURATION_FILE .ditaotrc}</code> in current directory and recursively ancestor directories</li>
+   *     <li><code>{@link #CONFIGURATION_FILE .ditaotrc}</code> in user home directory.</li>
+   *     <li><code>{@link #CONFIGURATION_FILE .ditaotrc}</code> in DITA-OT installation directory.</li>
+   *     <li><code>{@link #CONFIGURATION_FILE local.properties}</code> in DITA-OT installation directory.</li>
+   * </ol>
+   *
+   * <p>Duplicate properties are overridden.</p>
+   *
+   * @param ditaDir DITA-OT installation directory
+   * @return combined properties from configuration files
+   */
+  private Map<String, Object> getLocalProperties(File ditaDir) {
+    final Map<String, Object> res = new HashMap<>();
+    var files = Stream
+      .iterate(new File("").getAbsoluteFile(), Objects::nonNull, File::getParentFile)
+      .map(dir -> new File(dir, CONFIGURATION_FILE))
+      .collect(Collectors.toList());
+    final File homeFile = new File(new File(System.getProperty("user.home")), CONFIGURATION_FILE);
+    if (!files.contains(homeFile)) {
+      files.add(homeFile);
+    }
+    final File installDirFile = new File(ditaDir, CONFIGURATION_FILE);
+    if (!files.contains(installDirFile)) {
+      files.add(installDirFile);
+    }
+    final File installDirFileLegacy = new File(ditaDir, CONFIGURATION_FILE_OLD);
+    if (!files.contains(installDirFileLegacy)) {
+      files.add(installDirFileLegacy);
+    }
+    Collections.reverse(files);
+    files.stream().filter(File::exists).map(this::readProperties).forEach(res::putAll);
+    return res;
+  }
+
+  private Map<String, Object> readProperties(File localPropertiesFile) {
+    logger.debug("Reading " + localPropertiesFile);
+    try (InputStream in = Files.newInputStream(localPropertiesFile.toPath())) {
+      final Properties localProperties = new Properties();
+      localProperties.load(in);
+      return localProperties
+        .entrySet()
+        .stream()
+        .collect(Collectors.toMap(e -> e.getKey().toString(), Map.Entry::getValue));
+    } catch (IOException e) {
+      logger.error("Failed to read " + localPropertiesFile, e);
+      return Collections.emptyMap();
+    }
   }
 
   private List<Map<String, Object>> collectProperties(final File projectFile, final Map<String, Object> definedProps) {
@@ -509,8 +622,7 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
       })
       .collect(Collectors.toList());
     if (runDeliverable != null && projectProps.isEmpty()) {
-      printErrorMessage(String.format(locale.getString("project.error.deliverable_not_found"), runDeliverable));
-      throw new BuildException("");
+      throw new CliException(locale.getString("project.error.deliverable_not_found").formatted(runDeliverable));
     }
 
     return projectProps;
@@ -528,8 +640,7 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
 
   private org.dita.dost.project.Project readProjectFile(final File projectFile) throws BuildException {
     if (!projectFile.exists()) {
-      printErrorMessage(String.format(locale.getString("project.error.project_file_not_found"), projectFile));
-      throw new BuildException("");
+      throw new CliException(locale.getString("project.error.project_file_not_found").formatted(projectFile));
     }
     try {
       final ProjectFactory factory = ProjectFactory.getInstance();
@@ -538,8 +649,7 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
       validateProject(res);
       return res;
     } catch (Exception e) {
-      printErrorMessage(e.getMessage());
-      throw new BuildException("");
+      throw new CliException(e.getMessage());
     }
   }
 
@@ -548,7 +658,8 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
       for (Publication.Param param : deliverable.publication().params()) {
         if (RESERVED_PARAMS.containsKey(param.name())) {
           printErrorMessage(
-            MessageUtils.getMessage("DOTJ085E", param.name(), RESERVED_PARAMS.get(param.name())).toString()
+            MessageUtils.getMessage("DOTJ085E", param.name(), RESERVED_PARAMS.get(param.name())).toString(),
+            null
           );
         }
       }
@@ -559,14 +670,14 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
    * Handle the --plugins argument
    */
   private void printPlugins() {
+    logger.setOutputLevel(Project.MSG_INFO);
     final List<Map.Entry<String, String>> installedPlugins = Plugins.getInstalledPlugins();
     for (final Map.Entry<String, String> entry : installedPlugins) {
-      System.out.print(entry.getKey());
       if (entry.getValue() != null) {
-        System.out.print('@');
-        System.out.print(entry.getValue());
+        logger.info("{0}@{1}", entry.getKey(), entry.getValue());
+      } else {
+        logger.info(entry.getKey());
       }
-      System.out.println();
     }
   }
 
@@ -574,24 +685,26 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
    * Handle the --transtypes argument
    */
   private void printTranstypes() {
+    logger.setOutputLevel(Project.MSG_INFO);
     for (final String transtype : transtypes) {
-      System.out.println(transtype);
+      logger.info(transtype);
     }
   }
 
-  /**
-   * Handle the --deliverables argument
-   */
-  private void printDeliverables(final File projectFile) {
-    final List<Map.Entry<String, String>> pairs = readProjectFile(projectFile)
+  private void printDeliverables(DeliverablesArguments deliverablesArgs) {
+    logger.setOutputLevel(Project.MSG_INFO);
+    if (deliverablesArgs.projectFile == null) {
+      throw new CliException(locale.getString("deliverables.error.project_not_defined"), args.getUsage(true));
+    }
+    final List<Map.Entry<String, String>> pairs = readProjectFile(deliverablesArgs.projectFile)
       .deliverables()
       .stream()
       .filter(deliverable -> deliverable.id() != null)
       .map(deliverable -> pair(deliverable.id(), deliverable.name()))
-      .collect(Collectors.toList());
+      .toList();
     final int length = pairs.stream().map(Map.Entry::getKey).map(String::length).reduce(Integer::max).orElse(0);
     for (Map.Entry<String, String> pair : pairs) {
-      System.out.println(
+      logger.info(
         Strings.padEnd(pair.getKey(), length, ' ') + (pair.getValue() != null ? ("  " + pair.getValue()) : "")
       );
     }
@@ -610,8 +723,8 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
   private File getParentFile(final File file) {
     final File parent = file.getParentFile();
 
-    if (parent != null && args.msgOutputLevel >= Project.MSG_VERBOSE) {
-      System.out.println("Searching in " + parent.getAbsolutePath());
+    if (parent != null) {
+      logger.trace("Searching in " + parent.getAbsolutePath());
     }
 
     return parent;
@@ -631,9 +744,7 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
    * not
    */
   private File findBuildFile(final String start, final String suffix) {
-    if (args.msgOutputLevel >= Project.MSG_INFO) {
-      System.out.println("Searching for " + suffix + " ...");
-    }
+    logger.debug("Searching for " + suffix);
 
     File parent = new File(new File(start).getAbsolutePath());
     File file = new File(parent, suffix);
@@ -754,10 +865,10 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
       } catch (final Throwable t) {
         // yes, I know it is bad style to catch Throwable,
         // but if we don't, we lose valuable information
-        printErrorMessage("Caught an exception while logging the" + " end of the build.  Exception was:");
+        printErrorMessage("Caught an exception while logging the end of the build. Exception was:", null);
         t.printStackTrace();
         if (error != null) {
-          printErrorMessage("There has been an error prior to" + " that:");
+          printErrorMessage("There has been an error prior to that:", null);
           error.printStackTrace();
         }
         throw new BuildException(t);
@@ -825,10 +936,13 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
         logger = ClasspathUtils.newInstance(args.loggerClassname, Main.class.getClassLoader(), BuildLogger.class);
       } catch (final BuildException e) {
         printErrorMessage(
-          "The specified logger class " + args.loggerClassname + " could not be used because " + e.getMessage()
+          "The specified logger class " + args.loggerClassname + " could not be used because " + e.getMessage(),
+          e
         );
         throw new RuntimeException();
       }
+    } else if (Configuration.configuration.getOrDefault("cli.log-format", "legacy").equals("legacy")) {
+      logger = new org.apache.tools.ant.DefaultLogger();
     } else {
       logger = new DefaultLogger();
       ((DefaultLogger) logger).useColor(args.useColor);
@@ -843,11 +957,12 @@ public class Main extends org.apache.tools.ant.Main implements AntMain {
   }
 
   /**
-   * Prints the Ant version information to <code>System.out</code>.
+   * Prints the Ant version information logger.
    *
    * @throws BuildException if the version information is unavailable
    */
   private void printVersion() throws BuildException {
-    System.out.println(String.format(locale.getString("version"), Configuration.configuration.get("otversion")));
+    logger.setOutputLevel(Project.MSG_INFO);
+    logger.info(locale.getString("version").formatted(Configuration.configuration.get("otversion")));
   }
 }
